2017-05-06  Robby Stephenson  <robby@periapsis.org>

	* Removed Freebase data source.

2017-05-01  Robby Stephenson  <robby@periapsis.org>

	* Fixed track length for CD audio (Bug 379426).

2017-04-30  Robby Stephenson  <robby@periapsis.org>

	* Added data source for IGDB.com.

2017-04-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug showing icons for custom collection (Bug 378852).

2017-04-09  Robby Stephenson  <robby@periapsis.org>

	* Added data source for https://opensource.dbc.dk.
	* Added PEGI rating to GiantBomb results (Bug 375996).

2017-03-27  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.0.2.

2017-03-26  Robby Stephenson  <robby@periapsis.org>

	* Added data source for VideoGameGeek.com

2017-03-25  Robby Stephenson  <robby@periapsis.org>

	* Updated Douban data source to API v2 (from XML to JSON).

2017-03-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with image location for reports, introduced in v3.0.1 (Bug 377790).

2017-03-16  Robby Stephenson  <robby@periapsis.org>

	* Updated the IBS.it data source (Bug 373774).

2017-03-11  Robby Stephenson  <robby@periapsis.org>

	* Added data source for DataPoisk.ru.

2017-03-04  Robby Stephenson  <robby@periapsis.org>

	* Added data source for OMDBAPI.com.

2017-02-20  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.0.1.

2017-02-12  Robby Stephenson  <robby@periapsis.org>

	* Removed Microsoft Academic Search data source (defunct).
	* Updated DBLP data source.

2017-02-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed relative file locations in HTML export (Bug 376134).

2017-02-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed image open dialog to remember last location (Bug 376002).
	* Added ESRB rating for "Everyone 10+" (Bug 375995).

2017-01-30  Robby Stephenson  <robby@periapsis.org>

	* Fixed Bibsys z39.50 settings (Bug 375758).
	* Fixed "Report Bug" menu item to link to bugs.kde.org (Bug 375760).