@@ -37,7 +37,7 @@
 
 #cmakedefine HAVE_LIBBTPARSE
 
-#cmakedefine HAVE_DISCID
+#cmakedefine HAVE_CDIO
 
 #cmakedefine HAVE_LIBCSV
 
