@@ -87,9 +87,9 @@ IF( TAGLIB_FOUND )
   TARGET_LINK_LIBRARIES(translators ${TAGLIB_LIBRARIES})
 ENDIF( TAGLIB_FOUND )
 
-IF( DiscID_FOUND )
-  TARGET_LINK_LIBRARIES(translators ${DiscID_LIBRARIES})
-ENDIF( DiscID_FOUND )
+IF( CDIO_FOUND )
+  TARGET_LINK_LIBRARIES(translators ${CDIO_LIBRARIES})
+ENDIF( CDIO_FOUND )
 
 IF( KF5FileMetaData_FOUND )
   TARGET_LINK_LIBRARIES(translators KF5::FileMetaData)
